# sdl2_cmake_example

./: CMakeLists.txt
src/: main.cpp
